2014-12-22 Gregory L. Lee <lee218@llnl.gov>
	* location_be.cpp : make sure process is stopped before removing breakpoint
	* probe_be.cpp : reset processCount when finishing action
	* : implemented time event for non-zero timeouts
	* : don't stop target processes on time event, do so in	actions

2014-12-17 Gregory L. Lee <lee218@llnl.gov>
	* backend.cpp : stop target processes on time event, only when enabled

2014-12-16 Gregory L. Lee <lee218@llnl.gov>
	* symbol.cpp : added ~symbol for location function exit event
	* backend.cpp : stop target processes on time event

2014-12-15 Gregory L. Lee <lee218@llnl.gov>
	* err.cpp : also write warnings and fatal messages to logs

2014-12-12 Gregory L. Lee <lee218@llnl.gov>
	* : added support for long, float, double, and pointer types

2014-12-10 Gregory L. Lee <lee218@llnl.gov>
	* : implemented max aggregate

2014-12-03 Gregory L. Lee <lee218@llnl.gov>
	* : added irpc action
	* : renamed writeVariable to writeModuleVariable
	* frontend.cpp : specify TotalView path via DYSECTAPI_TOTALVIEW_PATH
	* StrAgg.C : fixed deserialize of counts

2014-12-02 Gregory L. Lee <lee218@llnl.gov>
	* dysect* : added LoadLibrary, WriteVariable, and Signal actions
	* event.cpp, Event.h : fixed Time probe (false warning and incorrect comparison in wasTriggered)

2014-10-17 Gregory L. Lee <lee218@llnl.gov>
	* dysect* : added Totalview and DepositCore actions

2014-10-17 Gregory L. Lee <lee218@llnl.gov>
	* scripts/* : added full-core-file merging script

2014-08-18 Gregory L. Lee <lee218@llnl.gov>
	* dysect* : modified logging to use macros with optional line info

2014-08-15 Gregory L. Lee <lee218@llnl.gov>
	* LocationBE.C : use getInitialFrame instead of walking full stack

2014-08-11 Nicklas Jensen <nboa@dtu.dk>
	* : added Event composition

2014-07-15 Gregory L. Lee <lee218@llnl.gov>
	* backend.cpp : only wait for attached processes, not full domain

2014-07-10 Gregory L. Lee <lee218@llnl.gov>